[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyrl"
version = "0.1.0"
authors = [
  "Josep Pon Farreny <jponfarreny@gmail.com>",
  "Guillem Orellana Trullols <guillem.orellana@gmail.com>"
]
maintainers = [
  "Josep Pon Farreny <jponfarreny@gmail.com>",
]

description = "Python Reinforcement Learning Agents"
readme = "README.md"
homepage = "https://github.com/jponf/pyrl"
license = "Apache Version 2.0"

keywords = ["Reinforcement Learning", "DDPG", "TD3", "SAC",
            "Hindsight Experience Replay", "HER"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
gym = "^0.15.4"
h5py = "^3.0.0"
six = "^1.0.0"
tensorflow = "^2.10"
torch = "^1.8.2"
tqdm = "^4.46.0"
typer = {version = "^0.6.1", extras = ["rich", "shellingham"]}

[tool.poetry.group.dev.dependencies]
black = "^22.10"
mypy = "^0.910"
types-six = "^1.16.3"
pre-commit = "^2.20.0"
safety = "^2.3.1"
isort = "^5.10.1"
flake8 = "^5.0.4"

[tool.poetry.group.gym-extras.dependencies]
box2d-py = "^2.3.8"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"
known_standard_library = "dataclasses,typing_extensions"
known_third_party = "pandas,plotly,yaml"
known_first_party = "statistics_backend"

[tool.mypy]
cache_dir = ".cache/mypy/"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
# plugins =
