[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[flake8]
ignore =
    # full code list can be found here: https://wemake-python-stylegui.de/en/latest/pages/usage/violations/
    # D100: Missing docstring in public module
    D100,
    # D104: Missing docstring in public package
    D104,
    # D107: Missing docstring in __init__
    D107,
    # D401: First line should be in imperative mood
    D401,
    # E203: whitespace before ‘:’
    E203,
    # E266: too many leading ‘#’ for block comment
    E266,
    # E501: line too long (82 > 79 characters)
    E501,
    # Q000: Remove bad quotes
    Q000,
    # RST201: Block quote ends without a blank line; unexpected unindent.
    RST201,
    # RST203: Definition list ends without a blank line; unexpected unindent.
    RST203,
    # RST301: Unexpected indentation.
    RST301,
    # RST303: Unknown directive type "XXX".
    RST303,
    # RST304: Unknown interpreted text role "XXX".
    RST304,
    # W503: line break before binary operator
    W503,
    # W504: line break after binary operator
    W504,
    # WPS100: Found wrong module name - Forbids to use blacklisted module names.
    WPS100,
    # WPS122: Found all unused variables definition: {0} - Forbids to define explicit unused variables.
    WPS122,
    # WPS303: Found underscored number: {0} - Forbids to use underscores (_) in numbers.
    WPS303,
    # WPS305: Forbid usage of f-strings.
    WPS305,
    # WPS432: Found magic number: {0} - Forbids to have nested imports in functions.
    WPS432,
    # WPS348: Found a line that starts with a dot' - Forbids to start lines with a dot.
    WPS348,
    # WPS412 Found `__init__.py` module with logic
    WPS412,
    # WPS421: Found wrong function call: {0} - Forbids to call some built-in functions.
    WPS421,
    # Numpy and Pandas mixes bitwise and comparison operators
	WPS465,
    # WPS529: Found implicit `.get()` dict usage - Forbids to use implicit .get() dict method.
    WPS529,
    # WPS211 Found too many arguments
    WPS211,
    # Requires files to have coding magic comment
    C101,


per-file-ignores =
    tests/*.py: D103, S101, WPS226, D103, WPS204
    **/__init__.py: F401, WPS235, WPS300
    statistics_backend/cli.py: DAR101
    statistics_backend/cli/etl_cmd.py: WPS114, WPS115, WPS201
    statistics_backend/configs/config_io.py: WPS301, WPS433, WPS440
    statistics_backend/constants.py: WPS115, WPS323, E800
    statistics_backend/clients/influxdb.py: WPS115
    statistics_backend/dao/edr/statements.py: WPS115, WPS226
    statistics_backend/dao/imanager/interface.py: WPS323
    statistics_backend/dao/imanager/model.py: WPS115
    statistics_backend/dao/influxdb/parameters.py: WPS115
    statistics_backend/dao/siemens_db/connection_parameters.py: WPS115
    statistics_backend/dao/siemens_db/interface.py: D301, WPS214, WPS342, WPS323
    statistics_backend/etl/etlprocess.py: DAR202
    statistics_backend/etl/kpis.py: WPS202
    statistics_backend/etl/kpis/kpibase.py: DAR202
    statistics_backend/metrics/*/*.py: WPS450, WPS115
    statistics_backend/settings.py: WPS115
    statistics_backend/utils/config_utils.py: WPS110
    statistics_backend/utils/settings.py: WPS115
    statistics_backend/utils/xymon.py: WPS115
    tests/constants.py: WPS115
    tests/kpis/test_kpis.py: D103, S101, WPS226, D103, WPS204, WPS202

nested-classes-whitelist =
    Config, Fields, Meta, Params



max-line-length = 99
max-complexity = 18
max-line-complexity = 17
max-cognitive-score = 15
max-try-body-length = 10
max-local-variables = 10
max-arguments = 6
max-annotation-complexity = 4
max-module-members = 20
max-imports = 14
statistics = False
format = wemake
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv,
    scripts,
    jupyter_notebook_config.py

# [mypy]
# cache_dir = .cache/mypy/
# ignore_missing_imports = true
# no_implicit_optional = true
# check_untyped_defs = true
# strict_equality = true
# disallow_any_generics = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_untyped_decorators = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# plugins =

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
combine_as_imports = true
lines_after_imports = 2
line_length=99
known_standard_library = dataclasses,typing_extensions
known_third_party = pandas,plotly,yaml
known_first_party = statistics_backend

[tool:pytest]
testpaths =
    tests
    statistics_backend
addopts =
    --strict
    -r sxX
    --cov-report=html
    --cov-report=term-missing:skip-covered
    --no-cov-on-fail
    --xdoc
console_output_style = count
cache_dir = .cache
markers =
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = true
data_file = .cache/coverage
omit =
    .venv/*
    */tests/*
    */__main__.py
    statistics_backend/visualizations.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    except DistributionNotFound
    TYPE_CHECKING
